[project]
name = "curation-app"
version = "0.1.0"
description = "Ontology assertion curation application"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "duckdb>=0.9.0",
    "pydantic>=2.0.0",
    "linkml>=1.6.0",
    "linkml-runtime>=1.6.0",
    "rdflib>=7.0.0",
    "pyyaml>=6.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "ruff",
]

[project.scripts]
curation-app = "curation_app.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/curation_app"]
